examples/smlfmt-1.2.0/test/fail/mismatched-function-name-1.sml
fun (Option.SOME x) + Option.NONE = "hello"
  | op- (NONE, SOME x) = "goodbye"
